# surveillance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VideoDisplay.cpp  Webcam.h  WebcamNotFoundException.h  build.sh  motion.cpp
include/: CSmtp.cpp  CSmtp.h  main.cpp
src/: App.cpp  App.h  FrameOutput.h  FrameOutputFile.cpp  FrameOutputFile.h  FrameOutputMail.cpp  FrameOutputMail.h  MailSender.cpp  MailSender.h  MotionTrack.cpp  MotionTrack.h  VideoDisplay.cpp  VideoDisplay.h  Webcam.cpp  Webcam.h  WebcamNotFoundException.cpp  main.cpp  motion.cpp
